# metagfx

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  imgui.ini  setup.bat  setup.sh
assets/envmaps/: brdf_lut.dds  irradiance.dds
claude/: metagfx_roadmap.md
claude/milestone_1_1/: milestone_1_1_docs.md  milestone_1_1_setup.txt
claude/milestone_1_2/: milestone_1_2_readme.md  milestone_1_2_rhi.txt
claude/milestone_1_3/: milestone_1_3_cmake_shaders.txt  milestone_1_3_shaders_readme.md  milestone_1_3_vulkan.txt  milestone_1_3_vulkan_impl.txt  milestone_1_3_vulkan_impl2.txt  milestone_1_3_vulkan_impl3.txt
claude/milestone_1_4/: milestone_1_4_descriptors_metagfx.txt  milestone_1_4_metagfx.txt  milestone_1_4_readme.md
claude/milestone_3_2/: ibl_implementation_plan.md
claude/milestone_3_3/: implementation_plan.md  milestone_3_3_summary.md
claude/milestone_4_1/: implementation_plan.md
claude/milestone_4_2/: build_status.md  dawn_dependencies.md  implementation_plan.md  implementation_summary.md
docs/: README.md  camera_auto_framing.md  camera_transformation_system.md  ibl_system.md  imgui_integration.md  light_system.md  material_system.md  metal.md  model_loading.md  modern_graphics_apis.md  moltenvk_compatibility.md  pbr_rendering.md  resource_management.md  rhi.md  shadow_mapping.md  skybox_system.md  textures_and_samplers.md  vulkan.md
include/metagfx/core/: Logger.h  Platform.h  Types.h
include/metagfx/renderer/: RasterizationRenderer.h  Renderer.h
include/metagfx/rhi/: Buffer.h  CommandBuffer.h  DescriptorSet.h  Framebuffer.h  GraphicsDevice.h  Pipeline.h  Sampler.h  Shader.h  SwapChain.h  Texture.h  Types.h
include/metagfx/rhi/metal/: MetalBuffer.h  MetalCommandBuffer.h  MetalDescriptorSet.h  MetalDevice.h  MetalFramebuffer.h  MetalPipeline.h  MetalSampler.h  MetalShader.h  MetalSwapChain.h  MetalTexture.h  MetalTypes.h
include/metagfx/rhi/vulkan/: VulkanBuffer.h  VulkanCommandBuffer.h  VulkanDescriptorSet.h  VulkanDevice.h  VulkanFramebuffer.h  VulkanPipeline.h  VulkanSampler.h  VulkanShader.h  VulkanSwapChain.h  VulkanTexture.h  VulkanTypes.h
include/metagfx/rhi/webgpu/: WebGPUBuffer.h  WebGPUCommandBuffer.h  WebGPUDescriptorSet.h  WebGPUDevice.h  WebGPUFramebuffer.h  WebGPUPipeline.h  WebGPUSampler.h  WebGPUShader.h  WebGPUSurfaceBridge.h  WebGPUSwapChain.h  WebGPUTexture.h  WebGPUTypes.h
include/metagfx/scene/: Camera.h  Light.h  Material.h  Mesh.h  Model.h  Scene.h  ShadowMap.h
include/metagfx/utils/: TextureUtils.h
src/app/: Application.cpp  Application.cpp.bak  Application.h  CMakeLists.txt  convert_spv.py  main.cpp  model.frag  model.frag.spv  model.frag.spv.inl  model.frag.spv.inl.tmp  model.vert  model.vert.spv  model.vert.spv.inl  model_test.frag  shadowmap.frag  shadowmap.frag.spv.inl  shadowmap.vert  shadowmap.vert.spv  shadowmap.vert.spv.inl  skybox.frag  skybox.frag.spv  skybox.frag.spv.inl  skybox.vert  skybox.vert.spv  skybox.vert.spv.inl  triangle.frag.spv.inl  triangle.vert  triangle.vert.spv  triangle.vert.spv.inl
src/core/: CMakeLists.txt  Logger.cpp  Platform.cpp
src/renderer/: CMakeLists.txt  RasterizationRenderer.cpp  Renderer.cpp
src/rhi/: CMakeLists.txt  GraphicsDevice.cpp
src/rhi/metal/: MetalBuffer.cpp  MetalCommandBuffer.cpp  MetalDescriptorSet.cpp  MetalDevice.cpp  MetalFramebuffer.cpp  MetalPipeline.cpp  MetalSDLBridge.h  MetalSDLBridge.mm  MetalSampler.cpp  MetalShader.cpp  MetalSwapChain.cpp  MetalTexture.cpp  MetalTypes.cpp
src/rhi/vulkan/: VulkanBuffer.cpp  VulkanCommandBuffer.cpp  VulkanDescriptorSet.cpp  VulkanDevice.cpp  VulkanFramebuffer.cpp  VulkanPipeline.cpp  VulkanSampler.cpp  VulkanShader.cpp  VulkanSwapChain.cpp  VulkanTexture.cpp  VulkanTypes.cpp
src/rhi/webgpu/: WebGPUBuffer.cpp  WebGPUCommandBuffer.cpp  WebGPUDescriptorSet.cpp  WebGPUDevice.cpp  WebGPUFramebuffer.cpp  WebGPUPipeline.cpp  WebGPUSampler.cpp  WebGPUShader.cpp  WebGPUSurfaceBridge.cpp  WebGPUSurfaceBridge_Linux.cpp  WebGPUSurfaceBridge_Metal.mm  WebGPUSurfaceBridge_Web.cpp  WebGPUSurfaceBridge_Windows.cpp  WebGPUSwapChain.cpp  WebGPUTexture.cpp  WebGPUTypes.cpp
src/scene/: CMakeLists.txt  Camera.cpp  Light.cpp  Material.cpp  Mesh.cpp  Model.cpp  Scene.cpp  ShadowMap.cpp
src/utils/: CMakeLists.txt  TextureUtils.cpp
tools/ibl_precompute/: CMakeLists.txt  DDSWriter.cpp  DDSWriter.h  IBLPrecompute.cpp  IBLPrecompute.h  main.cpp
